# fullstack-ai-cloud-native_app

phase1/: .gitignore  README.md  pyproject.toml
phase1/.claude/: settings.local.json
phase1/.specify/memory/: constitution.md
phase1/history/prompts/constitution/: 1-amend-constitution.constitution.prompt.md  1-update-python-todo-constitution.constitution.prompt.md  2-update-todo-evolution-constitution.constitution.prompt.md
phase1/history/prompts/todo-app/: 2-create-todo-app-spec.spec.prompt.md  3-create-todo-app-plan.plan.prompt.md  4-create-todo-app-tasks.tasks.prompt.md  5-implement-todo-app-features.implementation.prompt.md
phase1/history/prompts/todo-stability/: 6-create-todo-stability-spec.spec.prompt.md  7-create-todo-stability-plan.plan.prompt.md  8-create-todo-stability-tasks.tasks.prompt.md  9-implement-todo-stability.features.implementation.prompt.md
phase1/specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1/specs/001-todo-app/checklists/: requirements.md
phase1/specs/002-todo-stability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1/specs/002-todo-stability/checklists/: requirements.md
phase2/: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt  test_api_endpoints.py  test_db_connection.py
phase2/.claude/: settings.local.json
phase2/.claude/agents/: auth-agent.md  fastapi-backend-expert.md  neon-db-engineer.md  responsive-ui-integrator.md
phase2/.specify/memory/: constitution.md
phase2/app/: main.py
phase2/frontend/: package-lock.json
(+93 files in other folders)
